[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemy3.gd" type="Script" id=1]
[ext_resource path="res://icon_flipped.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Monster_3_Walk_ver1/Armature_SSmol_walk_ver1_00.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Monster_3_Walk_ver1/Armature_SSmol_walk_ver1_05.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Monster_3_Walk_ver1/Armature_SSmol_walk_ver1_06.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Monster_3_Walk_ver1/Armature_SSmol_walk_ver1_07.png" type="Texture" id=6]
[ext_resource path="res://Enemy/Monster_3_Walk_ver1/Armature_SSmol_walk_ver1_08.png" type="Texture" id=7]
[ext_resource path="res://Enemy/Monster_3_Walk_ver1/Armature_SSmol_walk_ver1_09.png" type="Texture" id=8]
[ext_resource path="res://Enemy/Monster_3_Walk_ver1/Armature_SSmol_walk_ver1_10.png" type="Texture" id=9]
[ext_resource path="res://Enemy/Monster_3_Walk_ver1/Armature_SSmol_walk_ver1_12.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 59.05, 81.4212 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Enemy3" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="EnemyCol" type="CollisionShape2D" parent="."]
position = Vector2( 1, 9 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 106, 65 )
enabled = true
cast_to = Vector2( 0, 32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "walk"
frame = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
